<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".truck.TruckListActivity">

    <include
        android:id="@+id/search_toolbar"
        layout="@layout/content_search_toolbar" />

    <TextView
        android:id="@+id/text_truck_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_500"
        android:layout_marginTop="@dimen/margin_500"
        android:text="@string/item_result"
        android:textColor="@color/grey_200"
        app:layout_constraintEnd_toStartOf="@id/text_truck_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_toolbar" />

    <TextView
        android:id="@+id/text_truck_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_filters"
        android:textColor="@color/blue_400"
        app:layout_constraintEnd_toStartOf="@id/image_truck_chevron_down"
        app:layout_constraintStart_toEndOf="@id/text_truck_result"
        app:layout_constraintTop_toTopOf="@id/text_truck_result" />

    <ImageView
        android:id="@+id/image_truck_chevron_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="@dimen/margin_500"
        android:background="@drawable/ic_chevron_down"
        android:backgroundTint="@color/blue_400"
        android:contentDescription="@string/chevron_description"
        app:layout_constraintBottom_toBottomOf="@id/text_truck_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_truck_filter"
        app:layout_constraintTop_toTopOf="@id/text_truck_filter"
        tools:layout_editor_absoluteY="156dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_truck"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_truck_result"
        tools:listitem="@layout/item_adapter_truck" />

</androidx.constraintlayout.widget.ConstraintLayout>